--- a/Alfred.alfredpreferences/workflows/user.workflow.A4B93D13-A7E7-4D68-A223-7D3AB35F9B26/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.A4B93D13-A7E7-4D68-A223-7D3AB35F9B26/info.plist
@@ -10,11 +10,13 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>FC19C091-91B1-4931-9EFB-F08ACACCCB12</string>
+				<string>977D8294-62B3-45CC-8274-1DCC4A928BCE</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
@@ -33,7 +35,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/DejaLu.app</string>
+					<string>/System/Applications/Mail.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
@@ -41,9 +43,9 @@
 			<key>type</key>
 			<string>alfred.workflow.action.launchfiles</string>
 			<key>uid</key>
-			<string>FC19C091-91B1-4931-9EFB-F08ACACCCB12</string>
+			<string>977D8294-62B3-45CC-8274-1DCC4A928BCE</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -52,6 +54,10 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
 				<integer>46</integer>
 				<key>hotmod</key>
@@ -70,7 +76,7 @@
 			<key>uid</key>
 			<string>7EAB9841-11DA-41B3-98D2-7731BC164A15</string>
 			<key>version</key>
-			<integer>1</integer>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
@@ -79,13 +85,17 @@
 	<dict>
 		<key>7EAB9841-11DA-41B3-98D2-7731BC164A15</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
-		<key>FC19C091-91B1-4931-9EFB-F08ACACCCB12</key>
+		<key>977D8294-62B3-45CC-8274-1DCC4A928BCE</key>
 		<dict>
+			<key>xpos</key>
+			<integer>510</integer>
 			<key>ypos</key>
-			<real>10</real>
+			<integer>10</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
