--- a/Alfred.alfredpreferences/workflows/user.workflow.E21099C9-3246-49E5-9192-DEECC8557923/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.E21099C9-3246-49E5-9192-DEECC8557923/info.plist
@@ -15,6 +15,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
@@ -33,7 +35,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Messages.app</string>
+					<string>/System/Applications/Messages.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
@@ -43,7 +45,7 @@
 			<key>uid</key>
 			<string>00702A7D-4E0A-4616-B3C2-5D2BA67A34A4</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -52,6 +54,10 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
 				<integer>34</integer>
 				<key>hotmod</key>
@@ -62,13 +68,15 @@
 				<false/>
 				<key>modsmode</key>
 				<integer>2</integer>
+				<key>relatedAppsMode</key>
+				<integer>0</integer>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
 			<string>E3174D98-3A3A-448C-AD78-68B2EE6A8795</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
@@ -77,11 +85,15 @@
 	<dict>
 		<key>00702A7D-4E0A-4616-B3C2-5D2BA67A34A4</key>
 		<dict>
+			<key>xpos</key>
+			<integer>500</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
 		<key>E3174D98-3A3A-448C-AD78-68B2EE6A8795</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
