--- a/Alfred.alfredpreferences/workflows/user.workflow.EEC1C295-5F97-4783-AB16-3118C45AF060/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.EEC1C295-5F97-4783-AB16-3118C45AF060/info.plist
@@ -6,28 +6,47 @@
 	<string></string>
 	<key>connections</key>
 	<dict>
-		<key>F3E6CADC-65C2-4DD6-87F9-9AC1C6B699B8</key>
+		<key>88655CBA-AB5F-4351-80EC-59CD7E0F6164</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
-				<string>BEDDAAE0-0995-444B-AD7B-EEBFB0E089ED</string>
+				<string>EE0CF3F7-5CD2-4175-9D72-D412281B4DB5</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string></string>
+	<string>Marin Usalj</string>
 	<key>description</key>
 	<string></string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Run Xcode project</string>
+	<string>Launch Code</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>paths</key>
+				<array>
+					<string>/Applications/Visual Studio Code.app</string>
+				</array>
+				<key>toggle</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.launchfiles</string>
+			<key>uid</key>
+			<string>EE0CF3F7-5CD2-4175-9D72-D412281B4DB5</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -35,69 +54,51 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
-				<integer>15</integer>
+				<integer>9</integer>
 				<key>hotmod</key>
-				<integer>1048576</integer>
+				<integer>1310720</integer>
 				<key>hotstring</key>
-				<string>R</string>
+				<string>V</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
 				<integer>2</integer>
-				<key>relatedApps</key>
-				<array>
-					<string>com.jetbrains.AppCode</string>
-				</array>
 				<key>relatedAppsMode</key>
-				<integer>1</integer>
+				<integer>0</integer>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
-			<string>F3E6CADC-65C2-4DD6-87F9-9AC1C6B699B8</string>
+			<string>88655CBA-AB5F-4351-80EC-59CD7E0F6164</string>
 			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>applescript</key>
-				<string>on alfred_script(q)
-tell application "Xcode"
-    activate
-    tell application "System Events"
-        perform (keystroke "r" using command down)
-    end tell
-end tell
-end alfred_script</string>
-				<key>cachescript</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.applescript</string>
-			<key>uid</key>
-			<string>BEDDAAE0-0995-444B-AD7B-EEBFB0E089ED</string>
-			<key>version</key>
-			<integer>0</integer>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>BEDDAAE0-0995-444B-AD7B-EEBFB0E089ED</key>
+		<key>88655CBA-AB5F-4351-80EC-59CD7E0F6164</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
-		<key>F3E6CADC-65C2-4DD6-87F9-9AC1C6B699B8</key>
+		<key>EE0CF3F7-5CD2-4175-9D72-D412281B4DB5</key>
 		<dict>
+			<key>xpos</key>
+			<integer>500</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
 	</dict>
 	<key>webaddress</key>
-	<string></string>
+	<string>supermar.in</string>
 </dict>
 </plist>
