--- a/Alfred.alfredpreferences/workflows/user.workflow.FBECB38C-A7DA-4B33-8AB6-85127C78D65B/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.FBECB38C-A7DA-4B33-8AB6-85127C78D65B/info.plist
@@ -15,6 +15,8 @@
 				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
+				<key>vitoclose</key>
+				<false/>
 			</dict>
 		</array>
 	</dict>
@@ -33,7 +35,7 @@
 			<dict>
 				<key>paths</key>
 				<array>
-					<string>/Applications/Calendar.app</string>
+					<string>/System/Applications/Calendar.app</string>
 				</array>
 				<key>toggle</key>
 				<false/>
@@ -43,7 +45,7 @@
 			<key>uid</key>
 			<string>EE0CF3F7-5CD2-4175-9D72-D412281B4DB5</string>
 			<key>version</key>
-			<integer>0</integer>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -52,6 +54,10 @@
 				<integer>0</integer>
 				<key>argument</key>
 				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
 				<key>hotkey</key>
 				<integer>8</integer>
 				<key>hotmod</key>
@@ -70,7 +76,7 @@
 			<key>uid</key>
 			<string>88655CBA-AB5F-4351-80EC-59CD7E0F6164</string>
 			<key>version</key>
-			<integer>1</integer>
+			<integer>2</integer>
 		</dict>
 	</array>
 	<key>readme</key>
@@ -79,11 +85,15 @@
 	<dict>
 		<key>88655CBA-AB5F-4351-80EC-59CD7E0F6164</key>
 		<dict>
+			<key>xpos</key>
+			<integer>100</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
 		<key>EE0CF3F7-5CD2-4175-9D72-D412281B4DB5</key>
 		<dict>
+			<key>xpos</key>
+			<integer>500</integer>
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
