--- a/.env
+++ b/.env
@@ -1,17 +1,7 @@
 #!/bin/sh
 
 export PATH=/usr/bin:/bin:/usr/sbin:/sbin
-
-PATH=/usr/local/share/npm/bin:$PATH # npm
-PATH=/usr/local/bin:$PATH # Homebrew
-PATH=$HOME/.local/bin:$PATH # linux
-PATH=$HOME/.linuxbrew/bin:$PATH # linux Homebrew
-
-# Ruby
-export GEM_HOME=$HOME/.gem
-export GEM_PATH=$GEM_HOME
-PATH=$GEM_HOME/bin:$PATH
-PATH="/usr/local/opt/ruby/bin:$PATH"
+PATH=$HOME/.local/bin:$PATH # local binaries
 
 # Golang
 export GOPATH=$HOME/code/go
@@ -22,15 +12,12 @@ PATH=$GOPATH/bin:$PATH
 export PATH="$HOME/.cargo/bin:$PATH"
 
 # Open files, git commits, etc. with Vim
-editor=kak
+editor=vim
 export EDITOR=$editor
 export VISUAL=$editor
 
 # Make SKIM great again
-export RG_DEFAULT_OPTIONS='-S --color=auto --hidden --follow'
-
-# Move GH private stuff out of .config
-export GH_CONFIG=~/.gh
+export RIPGREP_CONFIG_PATH="$HOME/.rgrc"
 
 # Usually, Homebrew installs in ~/Applications
 export HOMEBREW_CASK_OPTS="--appdir=/Applications"
@@ -41,3 +28,6 @@ export GPG_TTY=$(tty)
 
 # get rid of shell escape lag
 export KEYTIMEOUT=1
+
+# Mail
+export MAILDIR=$HOME/.mail
