Ignore all .config except nixpkgs
Ugh. big step.
This way we avoid adding all the exceptions for crappy software
putting tokens in .config. It completely defeated the purpose
of using XDG_CONFIG.

All the files I care about are under nixpkgs/ and then automatically
installed / linked by nix.

--- a/.gitignore
+++ b/.gitignore
@@ -4,34 +4,9 @@
 .netrc
 .ssh
 
-# rtv token and history
-.config/rtv
-
-# alacritty (moved to nix)
-.config/alacritty
-
-# Gocode wtf
-.config/gocode
+.config/
+!.config/nixpkgs/**/**
 
 # vim
 *.swp
 **/.netrwhist
-
-.gnupg/*
-!.gnupg/gpg.conf
-!.gnupg/gpg-agent.conf
-
-# apps putting secrets in .config
-.config/hub
-.config/gh
-.config/stripe
-.config/configstore
-
-# fish (moved to nix)
-.config/fish
-
-# rg (moved to nix)
-.config/rg
-
-# tig (moved to nix)
-.config/tig
