--- a/nixpkgs/linux/sway/config
+++ b/nixpkgs/linux/sway/config
@@ -20,14 +20,10 @@ set $dmenu 'rofi -theme gruvbox-dark-soft -modi run,drun,window -show drun'
 
 ### Output configuration
 #
-# Default wallpaper
-#output * bg ~/.config/sway/backgrounds/Sway_Wallpaper_Blue_1920x1080.png fill
-#
-# Example configuration:
-#
+#   Example:
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
+#   swaymsg -t get_outputs
+output * bg ~/.wallpaper fill
 
 ### Idle configuration
 #
