--- a/nixpkgs/linux/sway/config
+++ b/nixpkgs/linux/sway/config
@@ -1,15 +1,16 @@
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-# !! This file is managed by home-manager. Don't forget to home-manager switch
-# !! testing changes if you don't want to waste another hour
+# !! This file is managed by home-manager.
+# !! Edit it in nixpkgs/linux/sway, NOT in ~/.config/sway.
+# !! Run `home-manager switch` to apply changes after changing.
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 #
 ### UI
-default_border pixel 4
-gaps inner 15
+default_border pixel 3
+gaps inner 10
 
 ### Variables
 #
-# Logo key. Use Mod1 for Alt.
+# Mod4 - Logo key. Mod1 - Alt.
 set $mod Mod4
 
 set $left h
@@ -18,163 +19,130 @@ set $up k
 set $right l
 set $term alacritty
 set $browser firefox
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-set $menu 'albert show'
+# Note: pass the final command to swaymsg so that the resulting window can be
+# opened on the original workspace that the command was run on.
+set $menu swaymsg exec 'albert show'
 
 ### Output configuration
 #
-#   Example:
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#   swaymsg -t get_outputs
 output * bg ~/.wallpaper fill
 
-### Idle configuration
+output eDP-1 {
+  scale 1.5
+}
+
+### Input configuration
 #
-# Example configuration:
+input * {
+    repeat_delay 175
+    repeat_rate  75
+}
+
+input type:touchpad {
+  tap enabled
+  natural_scroll enabled
+}
+
+### Idle configuration
 #
 exec swayidle -w \
          timeout 300 'swaylock -f -c 000000' \
          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
 
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
-input * {
-    repeat_delay 175
-    repeat_rate  75
-}
-
 ### Key bindings
 #
-# Basics:
-#
-    # Start a terminal
-    bindsym $mod+Return exec $term
-    
-    # Start a browser
-    bindsym $mod+b exec $browser
+# Start a terminal
+bindsym $mod+Return exec $term
+
+# Start a browser
+bindsym $mod+b exec $browser
+
+# Kill focused window
+bindsym $mod+q kill
+
+# Start launcher
+bindsym $mod+Space exec $menu
+
+# Reload the configuration file
+bindsym $mod+Shift+c reload
+
+# Drag floating windows by holding down $mod and left mouse button.
+# Resize them with right mouse button + $mod.
+# Despite the name, also works for non-floating windows.
+# Change normal to inverse to use left mouse button for resizing and right
+# mouse button for dragging.
+floating_modifier $mod normal
 
 
-    # Kill focused window
-    bindsym $mod+q kill
+# Exit sway (logs you out of your Wayland session)
+bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 
-    # Start your launcher
-    bindsym $mod+Space exec $menu
-
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
-    # Despite the name, also works for non-floating windows.
-    # Change normal to inverse to use left mouse button for resizing and right
-    # mouse button for dragging.
-    floating_modifier $mod normal
-
-    # Reload the configuration file
-    bindsym $mod+Shift+c reload
-
-    # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
-#
 # Moving around:
 #
-    # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
+# Move your focus around
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
 
-    # Try macos CMD+C|V|...
-    # bindsym $mod+c exec 'wl-copy'
-    # bindsym $mod+v wl-paste
+# Try macos CMD+C|V|...
+# bindsym $mod+c exec 'wl-copy'
+# bindsym $mod+v wl-paste
 
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-#
+# Move the focused window with the same, but add Shift
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
+
 # Workspaces:
-#
-    # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
-#
+# Switch to workspace
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
+# Move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
+
 # Layout stuff:
 #
-    # You can "split" the current object of your focus with
-    bindsym $mod+backslash splith
-    bindsym $mod+minus splitv
+# You can "split" the current object of your focus with
+bindsym $mod+backslash splith
+bindsym $mod+minus splitv
 
-    # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+# Switch the current container between different layout styles
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
-    # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
+# Make the current focus fullscreen
+bindsym $mod+f fullscreen
 
-    # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
+# Toggle the current focus between tiling and floating mode
+bindsym $mod+Shift+space floating toggle
 
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+mod1+space focus mode_toggle
+# Swap focus between the tiling area and the floating area
+bindsym $mod+mod1+space focus mode_toggle
 
-    # Move focus to the parent container
-    bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
+# Move focus to the parent container
+bindsym $mod+a focus parent
 
-    # Move the currently focused window to the scratchpad
-    # bindsym $mod+Shift+p move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    # bindsym $mod+p scratchpad show
-#
 # Resizing containers:
 #
 mode "resize" {
@@ -187,7 +155,30 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#
+# Media controls (sorted by lenovo kb):
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+# missing: external screen button? desktop button?
+# missing: wifi off button
+
+# missing: chat button?
+# missing: phone open button?
+# missing: phone close button?
+# missing: star button?
+
+# bindsym XF86AudioPlay exec playerctl play-pause
+# bindsym XF86AudioNext exec playerctl next
+# bindsym XF86AudioPrev exec playerctl previous
+
+# missing: PrtSc button
+# no idea what this is:bindsym XF86Search exec bemenu-run
+
+
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
@@ -205,4 +196,5 @@ bar {
     }
 }
 
+# Startup commands
 exec albert
