[rice] add waybar

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -5,8 +5,23 @@
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 #
 ### UI
-default_border pixel 3
-gaps inner 10
+default_border pixel 2
+gaps inner 7
+smart_gaps on
+
+# Set colors
+set $c_bg #171717
+set $c_bg_2nd #272727
+set $c_fg #DEDEDE
+set $c_fg_2nd #64727D
+set $c_prpl #552299
+
+# class                 border  background   text      indicator   child_border
+client.focused          $c_prpl  $c_prpl     $c_fg       $c_bg      $c_prpl
+client.focused_inactive $c_bg    $c_bg_2nd   $c_fg       $c_bg      $c_bg
+client.unfocused        $c_bg    $c_bg       $c_fg_2nd   $c_bg      $c_bg
+
+###############################################################################
 
 ### Variables
 #
@@ -182,7 +197,7 @@ bindsym XF86MonBrightnessUp exec brightnessctl set +5%
 # Status Bar:
 #
 bar {
-    status_command waybar
+    swaybar_command waybar
 }
 
 # Startup commands
