Add lock shortcut on sway

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -65,6 +65,9 @@ exec swayidle -w \
          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
 
+# Screen lock
+bindsym $mod+Control+q exec swaylock -f -c 000000
+
 ### Key bindings
 #
 # Start a terminal
