enable clamshell mode (lg 5k works with the x1!!!!)

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -42,9 +42,13 @@ set $menu swaymsg exec 'albert show'
 #
 output * bg ~/.wallpaper fill
 
-output eDP-1 {
+set $laptop eDP-1
+output $laptop {
   scale 1.5
 }
+
+bindswitch --reload --locked lid:on output $laptop disable
+bindswitch --reload --locked lid:off output $laptop enable
 
 ### Input configuration
 #
