--- a/linux/sway/config
+++ b/linux/sway/config
@@ -210,7 +210,7 @@ bar {
     colors {
         separator #222222
         background #222222
-        statusline #dddddd
+        statusline #ffffff
         focused_workspace #0088CC #0088CC #ffffff
         active_workspace #333333 #333333 #ffffff
         inactive_workspace #333333 #333333 #888888
