--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -2,18 +2,7 @@ theme = "native"
 icons = "awesome"
 
 [[block]]
-block = "cpu"
-interval = 1
-format = " {barchart}"
-on_click = "gnome-system-monitor"
-
-[[block]]
 block = "backlight"
-
-[[block]]
-block = "memory"
-display_type = "memory"
-format_mem = "{MUg}GB"
 
 [[block]]
 block = "sound"
@@ -32,5 +21,5 @@ format = "{percentage}%"
 [[block]]
 block = "time"
 interval = 60
-format = "%a %d/%m %R"
+format = "%a %d %M %R"
 on_click = "gnome-clocks"
