--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -21,5 +21,5 @@ format = "{percentage}%"
 [[block]]
 block = "time"
 interval = 60
-format = "%a %d %M %R"
+format = "%a %e %b %R"
 on_click = "gnome-clocks"
