--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -16,7 +16,7 @@ device_format = "{icon}{ap}"
 [[block]]
 block = "battery"
 interval = 10
-format = "{percentage}%"
+format = "{percentage}"
 
 [[block]]
 block = "time"
