--- a/linux/sway/config
+++ b/linux/sway/config
@@ -26,7 +26,8 @@ client.unfocused        $c_bg     $c_bg       $c_fg_2nd   $c_bg       $c_bg
 ### Variables
 #
 # Mod4 - Logo key. Mod1 - Alt.
-set $mod Mod4
+set $mod Mod1
+set $mod2 Mod4
 
 set $left h
 set $down j
@@ -160,7 +161,7 @@ bindsym $mod+f fullscreen
 bindsym $mod+Shift+space floating toggle
 
 # Swap focus between the tiling area and the floating area
-bindsym $mod+mod1+space focus mode_toggle
+bindsym $mod+$mod2+space focus mode_toggle
 
 # Move focus to the parent container
 bindsym $mod+a focus parent
