remove backlight and sound from i3status
we have a macos-like overlay now

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -2,10 +2,8 @@ theme = "native"
 icons = "awesome"
 
 [[block]]
-block = "backlight"
-
-[[block]]
 block = "sound"
+format = ""
 
 [[block]]
 block = "networkmanager"
