--- a/linux/sway/config
+++ b/linux/sway/config
@@ -48,6 +48,12 @@ output $laptop {
   scale 1
 }
 
+# Rotate ext. monitor by 180. Uncomment if need be
+# set $externalMonitor DP-2
+# output $externalMonitor {
+#   transform 180
+# }
+
 bindswitch --reload --locked lid:on output $laptop disable
 bindswitch --reload --locked lid:off output $laptop enable
 
