--- a/linux/sway/config
+++ b/linux/sway/config
@@ -124,6 +124,9 @@ floating_modifier $mod normal
 # Assign apps to consistent workspaces
 assign [app_id="firefox"] 2
 assign [app_id="Alacritty"] 3
+for_window [app_id="(org.gnome.*|gnome-*|telegramdesktop|cawbird)"] {
+  floating enable
+}
 
 # Exit sway (logs you out of your Wayland session)
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
