[sway] unfuck bar a bit more, remove clock icon

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -25,5 +25,6 @@ format = "{percentage}"
 [[block]]
 block = "time"
 interval = 60
-format = "%a %e %b %R"
+format = "%a %b %-d %R"
 on_click = "gnome-clocks"
+icons_format = ""
