--- a/linux/sway/config
+++ b/linux/sway/config
@@ -114,6 +114,9 @@ bindsym $mod+Space exec $menu
 # Reload the configuration file
 bindsym $mod+Shift+c reload
 
+# Open the last notification
+bindsym $mod+n exec makoctl invoke
+
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
 # Despite the name, also works for non-floating windows.
