--- a/linux/sway/config
+++ b/linux/sway/config
@@ -132,6 +132,7 @@ assign [app_id="firefox"] 2
 assign [app_id="Alacritty"] 3
 for_window [app_id="(org.gnome.*|gnome-*|telegramdesktop|cawbird)"] {
   floating enable
+  border none
 }
 
 # Exit sway (logs you out of your Wayland session)
