--- a/linux/sway/config
+++ b/linux/sway/config
@@ -52,7 +52,7 @@ set $left h
 set $down j
 set $up k
 set $right l
-set $term alacritty
+set $term alacritty --title term
 set $browser firefox
 set $menu "rofi -combi-modi window,drun,ssh,run,calc -show combi -show-icons"
 
@@ -126,8 +126,9 @@ bindsym $mod+n exec makoctl invoke
 floating_modifier $mod normal
 
 # Assign apps to consistent workspaces
+for_window [app_id="floating_term"] floating enable
 assign [app_id="firefox"] 2
-assign [app_id="Alacritty"] 3
+assign [title="term"] 3
 for_window [app_id="(org.gnome.*|gnome-*|telegramdesktop|cawbird)"] {
   floating enable
   border none
