--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -31,7 +31,7 @@ format_unavailable = ""
 
 [[block]]
 block = "networkmanager"
-on_click = "alacritty --class floating_term -e nmtui connect"
+on_click = "foot --title floating_term nmtui connect"
 ap_format = "{ssid}"
 device_format = "{icon}{ap}"
 interface_name_exclude = ["virbr[0-9]", "br\\-[0-9a-f]{12}", "docker\\d+"]
