--- a/linux/sway/config
+++ b/linux/sway/config
@@ -112,7 +112,7 @@ bindsym $mod+Space exec $menu
 bindsym $mod+Shift+c reload
 
 # Open the last notification
-bindsym $mod+n exec makoctl invoke
+bindsym $mod+n exec makoctl dismiss
 
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
