--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -14,8 +14,8 @@ icons_format = ""
 
 [[block]]
 block = "custom"
-command = ''' bash -c "notmuch count --output=threads 'folder:/.*/Inbox/' 2>/dev/null || echo 0" | jq '{icon:"mail", text: . | tostring}' '''
-on_click = "astroid"
+command = '''bash -c "notmuch count --output=threads 'path:/.*/Inbox/new/' 2>/dev/null || echo 0" | jq '{icon:"mail", text: . | tostring}''''
+on_click = "swaymsg workspace 4"
 json = true
 interval = 10
 
