--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -8,25 +8,16 @@ critical_fg = "#FF5555"
 warning_fg = "#F96A02"
 
 [[block]]
+block = "custom"
+on_click = "swaymsg workspace 4"
+command = '''n=$(notmuch count --output=threads 'path:/.*/Inbox/' 2>/dev/null); test $n -ne 0 && echo -e "\uf0e0 $n"'''
+hide_when_empty = true
+shell = "bash"
+
+[[block]]
 block = "cpu"
 format = "{barchart}"
 icons_format = ""
-
-[[block]]
-block = "maildir"
-interval = 60
-inboxes = ["/home/supermarin/.mail/fastmail/Inbox", "/home/supermarin/.mail/butters/Inbox"]
-threshold_warning = 1
-threshold_critical = 10
-display_type = "new"
-
-
-# [[block]]
-# block = "custom"
-# command = '''bash -c "notmuch count --output=threads 'path:/.*/Inbox/new/' 2>/dev/null || echo 0" | jq '{icon:"mail", text: . | tostring}''''
-# on_click = "swaymsg workspace 4"
-# json = true
-# interval = 10
 
 [[block]]
 block = "sound"
