[web] s/firefox/qutebrowser

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -53,7 +53,7 @@ set $down j
 set $up k
 set $right l
 set $term foot --title term
-set $browser firefox
+set $browser qutebrowser
 set $menu "rofi -combi-modi window,drun,run,calc -show combi -show-icons"
 
 ### Output configuration
@@ -125,7 +125,6 @@ floating_modifier $mod normal
 
 # Assign apps to consistent workspaces
 for_window [title="floating_term"] floating enable
-# assign [app_id="firefox"] 2
 assign [title="^term$"] 3
 
 for_window [app_id="(org.gnome.*|gnome-*|telegramdesktop|cawbird)"] {
